# Prototype-Backend

./: .gitignore  CHECKPOINT_IMPLEMENTATION_GUIDE.md  PSO_INTEGRATION_README.md  README.md  crowdcompute.db  main.py  pyproject.toml  requirements.txt  run_pso_test.py
client/: README.md  client.py
common/: README.md  protocol.py  serializer.py
developer_sdk/: README.md  __init__.py  api.py  client.py
foreman/: README.md  __init__.py  database.py  main.py  pso_load_balancer.py  websocket_manager.py
foreman/api/: __init__.py  checkpoint_routes.py  routes.py  temp_dashboard.html  websockets.py
foreman/core/: completion_handler.py  connection_manager.py  job_manager.py  message_handlers.py  task_dispatcher.py  websocket_manager.py  ws_manager.py
foreman/db/: base.py  crud.py  models.py
foreman/schema/: schema.py
pc_worker/: README.md  __init__.py  config.py  dashboard.py  main.py  worker.py
pc_worker/api/: __init__.py  dashboard.py  routes.py
pc_worker/core/: __init__.py  app.py  worker.py
pc_worker/schema/: __init__.py  models.py
pc_worker/staged_results_manager/: __init__.py  (+2 more)
tests/: README.md  crowdcompute.db  example_client.py  mcmc_bayesian_inference_client.py  monte_carlo_euler_client.py  quick_clear_db.py  run_foreman_simple.py  run_multiple_workers.py  run_worker_simple.py  sentiment_analysis_client.py  sentiment_analysis_new_approach_client_1.py  sentiment_analysis_pytorch_client.py  sentiment_analysis_transformers_approach.py  tensorflow_tensor_distribution_examples.py  test_pso_integration.py  view_database.py
worker/: README.md  worker.py
(+18 files in other folders)
