[project]
name = "prototype-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.19.0",
    "asyncio-mqtt==0.16.1",
    "cloudpickle==3.0.0",
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
    "websockets==12.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "psutil>=5.8.0",
]

[project.scripts]
foreman = "foreman.main:main"
worker = "worker.worker:main"
test-pso = "tests.test_pso_integration:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
